--- a/RedEdrPplService/RedEdrPplService.vcxproj
+++ b/RedEdrPplService/RedEdrPplService.vcxproj
@@ -148,14 +148,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\RedEdrShared\etw_krabs.cpp" />
+    <ClCompile Include="..\RedEdrShared\myprocess.cpp" />
     <ClCompile Include="..\RedEdrShared\piping.cpp" />
+    <ClCompile Include="..\RedEdrShared\process_resolver.cpp" />
     <ClCompile Include="..\RedEdrShared\utils.cpp" />
     <ClCompile Include="etwtihandler.cpp" />
     <ClCompile Include="etwtireader.cpp" />
     <ClCompile Include="control.cpp" />
     <ClCompile Include="emitter.cpp" />
     <ClCompile Include="logging.cpp" />
-    <ClCompile Include="objcache.cpp" />
     <ClCompile Include="RedEdrPplService.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -164,7 +165,6 @@
     <ClInclude Include="control.h" />
     <ClInclude Include="emitter.h" />
     <ClInclude Include="logging.h" />
-    <ClInclude Include="objcache.h" />
     <ClInclude Include="uthash.h" />
   </ItemGroup>
   <ItemGroup>
