featur: check commandline of processes (if possible) - for rundll32 support

--- a/RedEdrPplService/RedEdrPplService.vcxproj.filters
+++ b/RedEdrPplService/RedEdrPplService.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="..\RedEdrShared\process_resolver.cpp">
       <Filter>Source Files\existing</Filter>
     </ClCompile>
+    <ClCompile Include="..\RedEdrShared\process_query.cpp">
+      <Filter>Source Files\existing</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="emitter.h">
