--- a/RedEdrShared/RedEdrShared.vcxproj.filters
+++ b/RedEdrShared/RedEdrShared.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="process_resolver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="process_mem_static.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="loguru.hpp">
@@ -69,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="process_resolver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="process_mem_static.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
