--- a/RedEdrShared/RedEdrShared.vcxproj
+++ b/RedEdrShared/RedEdrShared.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="loguru.cpp" />
     <ClCompile Include="piping.cpp" />
     <ClCompile Include="myprocess.cpp" />
+    <ClCompile Include="process_mem_static.cpp" />
     <ClCompile Include="process_query.cpp" />
     <ClCompile Include="process_resolver.cpp" />
     <ClCompile Include="ranges.cpp" />
@@ -147,6 +148,7 @@
     <ClInclude Include="mypeb.h" />
     <ClInclude Include="piping.h" />
     <ClInclude Include="myprocess.h" />
+    <ClInclude Include="process_mem_static.h" />
     <ClInclude Include="process_query.h" />
     <ClInclude Include="process_resolver.h" />
     <ClInclude Include="ranges.h" />
